--- a/Template Index.html
+++ b/Template Index.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_top">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Booking System</title>
+    <title>XR Appointment Booking System</title>
     <style>
       :root {
         --primary-color: #006633;    /* Main brand color */
